--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 h1{
     text-align: center;
-
+   
 }
 h2{
-    text-indent: 2%
+    text-indent: 2%;
+    background-color: aqua;
+    width: 30%;
 }
 p{
-
-width: 30%;
+    background-color: aqua;
+    width: 30%;
 }
