--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ background-color: aqua;
     width: 50%;
 }
 .Funfact2 {
-    background-color: aqua;
+    background-color: orange;
     width: 50%;
 }
 .Funfact3 {
