--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,18 @@ h1{
    
 }
 
-.Funfact1 {
+.title {
 background-color: aqua;
-    width: 50%;
+    width: 30%;
 }
-.Funfact2 {
-    background-color: orange;
-    width: 50%;
+.message {
+    background-color: greenyellow;
+    width: 40%;
 }
-.Funfact3 {
-    background-color: aqua;
-    width: 50%;
-  
+img{
+    height: 40%;
+    width: 20%;
+}
+a{
+    text-align: right;
 }
